# aihub

./: CNAME  index.html
assets/: favicon.png-B6c_-Bsm.avif  index-BFuVb9G0.js  index-C03Qw-XK.js  index-CgbSRdmM.js  index-Cqh4hLHk.js  index-D1WzDbmX.js  index-D8aepM0v.js  index-bi-aZgn4.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  constants.js  main.jsx  theme.js
services/api-gateway/: compose.yaml  default.conf  k8s.yaml
services/catalogue-service/: .gitignore  .prettierrc  Dockerfile  catalogue-configmap.yaml  compose.yaml  index.js  k8s.yaml  package-lock.json  package.json  server.js
services/evaluation-service/: .gitignore  compose.yaml  evaluation-configmap.yaml  k8s.yaml
services/evaluation-service/airena-trainer/: README.md  agent.py  pyproject.toml  trainer.py
services/evaluation-service/airena-trainer/airena_trainer/: trainer.py  training_env.py
services/evaluation-service/airena-trainer/airena_trainer/abc/: agent.py
services/evaluation-service/airena-trainer/examples/: agent.py  trainer.py
services/file-service/: .gitignore  Dockerfile  README.md  compose.yaml  file-configmap.yaml  k8s.yaml  package-lock.json  package.json  tsconfig.json
services/result-service/: Dockerfile  README.md  compose.yaml  k8s.yaml  package-lock.json  package.json  results-configmap.yaml  tsconfig.json
services/results-service/: compose.yaml  package-lock.json  package.json
services/submission-service/: Dockerfile  compose.yaml  package-lock.json  package.json
services/user-service/: .gitignore  k8s.yaml  (+4 more)
(+260 files in other folders)
