[build-system]
requires = ["setuptools>=77.0.3", "gymnasium>=1.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "airena-trainer"
version = "0.0.1"
authors = [
  { name="Yifeng Li", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"